# personal_projects

./: README.md
convnet_for_shading/: README.md  training-log.csv
doppelganger_ai_driven_social_network/: README.md
doppelganger_ai_driven_social_network/server-side/: composer.json  delete-user.php  empty_rekognition_collection.php  get-messages.php  (+11 more)
peer2peer_chat/: .classpath  .project  README.md
robot_motion_planner/evolutionary_prototype(final code)/: CMakeLists.txt  LICENSES.md  README.md  axes_helper_factory.cpp  axes_helper_factory.h  box_collider.cpp  box_collider.h  cartesian_controller.cpp  cartesian_controller.h  collision_controller.cpp  collision_controller.h  collision_model.cpp  collision_model.h  collision_selection_manager.cpp  collision_selection_manager.h  collision_view.cpp  collision_view.h  end_effector_view.cpp  end_effector_view.h  forward_kinematics.cpp  forward_kinematics.h  graph_view.cpp  graph_view.h  i_nearest_neighbour.h  input_manager.cpp  input_manager.h  inverse_kinematics.cpp  inverse_kinematics.h  joint_controller.cpp  joint_controller.h  main.cpp  motion_planner.cpp  motion_planner.h  motion_planning_controller.cpp  motion_planning_controller.h  naive_nearest_neighbour.cpp  naive_nearest_neighbour.h  object_selection_controller.cpp  object_selection_controller.h  observable.h  (+15 more)
robot_motion_planner/evolutionary_prototype(final code)/models/: shape0.mesh  shape2.001.mesh.xml
robot_motion_planner/evolutionary_prototype(final code)/models/visual/: SWMaterial-0.002.material  SWMaterial-0_002.material  SWMaterial-1_001.001.material  SWMaterial-2.material  SWMaterial-2_002.material  SWMaterial-2_003.material  SWMaterial-3.material  SWMaterial-4_001.material  base.mesh  base.mesh.xml  blender2ogre-export.scene  forearm1.mesh  forearm2.mesh  forearm3.mesh.xml  forearm4.mesh  forearm4.mesh.xml  forearm5.mesh  forearm5.mesh.xml  shoulder1.mesh  upperarm3.mesh  upperarm4.mesh  upperarm4.mesh.xml  wrist1_1.mesh  wrist1_3.mesh.xml  wrist2_1.mesh.xml  wrist2_2.mesh  wrist2_3.mesh  wrist3_1.mesh.xml
robot_motion_planner/throwaway_prototype/: CMakeLists.txt  main.cpp  resources.cfg  wxOgre.cpp  wxOgre.h
robot_motion_planner/throwaway_prototype/models/: SWMaterial-0.material  blender3ogre-export.scene  shape0.mesh.xml  shape1.001.mesh  shape2.001.mesh
robot_motion_planner/throwaway_prototype/models/visual/: SWMaterial-0.001.material  SWMaterial-0.material  SWMaterial-0_001.001.material  SWMaterial-0_001.material  SWMaterial-0_003.material  SWMaterial-1.001.material  SWMaterial-1.002.material  SWMaterial-1.material  SWMaterial-1_001.material  SWMaterial-1_002.material  SWMaterial-1_003.material  SWMaterial-2.001.material  SWMaterial-2.002.material  SWMaterial-2_001.001.material  SWMaterial-2_001.material  SWMaterial-3.001.material  SWMaterial-3_001.material  SWMaterial-4.001.material  SWMaterial-4.material  forearm3.mesh  shoulder1.mesh.xml  shoulder2.mesh  shoulder3.mesh  shoulder3.mesh.xml  upperarm1.mesh  upperarm1.mesh.xml  upperarm2.mesh  upperarm3.mesh.xml  wrist1_1.mesh.xml  wrist1_2.mesh  wrist1_3.mesh  wrist2_1.mesh  wrist2_3.mesh.xml  wrist3.mesh
(+152 files in other folders)
